// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<body>
  <p>
    Hello, World!
  </p>
</body>
`;

exports[` 2`] = `
<body
  dangerouslySetInnerHTML={
    Object {
      "__html": "",
    }
  }
  data-baz="qux"
  data-foo="bar"
/>
`;

exports[`anvil-ui-ft-shell/src/components/Body with stringified contents renders the given HTML string without escaping 1`] = `
<body
  dangerouslySetInnerHTML={
    Object {
      "__html": "<p>Hello, World!</p>",
    }
  }
/>
`;
